# graphics

./: .gitignore  PUBLISHING.md  README.md  RECOVERY.md  REFACTOR_PLAN.md  apply_cp_unix_graphics_patches.sh  circuitpython.mk  font_8x14.h  font_8x16.h  font_8x8.h  gfx_area_mp.c  gfx_area_mp.h  gfx_bindings_mp.c  gfx_bindings_mp.h  gfx_bmp565.c  gfx_bmp565.h  gfx_canvas_mp.c  gfx_canvas_mp.h  gfx_capabilities.c  gfx_capabilities.h  gfx_clip_mp.c  gfx_clip_mp.h  gfx_core.h  gfx_draw.c  gfx_draw.h  gfx_files.c  gfx_files.h  gfx_font.c  gfx_font.h  gfx_framebuffer.c  gfx_framebuffer.h  gfx_module_cpy.c  gfx_module_mp.c  gfx_shapes.c  gfx_shapes.h  graphics_bundle.c  graphics_native_cpy.c  graphics_qstrdefs.h  index.html  manifest.py  (+9 more)
.github/workflows/: deploy-pages.yml  publish-testpypi.yml
api/: index.html  llms-full.txt  llms.txt  search-index.json  sitemap.xml  sourcey.css
circuitpython_spike/: copy_manifest.txt
circuitpython_spike/shared-bindings/graphics/: __init__.c  __init__.h
circuitpython_spike/shared-bindings/graphics_native/: __init__.c  __init__.h
circuitpython_spike/shared-module/graphics/: __init__.c  __init__.h
circuitpython_spike/shared-module/graphics_native/: __init.c
docs/: README.md  package-lock.json  package.json  sourcey.config.ts
docs/scripts/: generate_reference.py  verify-site.mjs
gfxpy/: __init__.py
py/graphics/: __init__.py  _area.py  _capabilities.py  _framebuf.py  _framebuf_plus.py  _framebuf_pure.py
scripts/: benchmark_framebuf.py  next_release_version.sh  publish_release_tag.sh  sync_fonts.py
web/: index.html
