[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graphics-cmod"
dynamic = ["version"]
description = "Native graphics cmod for CPython (FrameBuffer, Area)"
license = "MIT"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

# Wheel CI: one wheel per CPython minor (cp310…cp314) × Linux + Windows + Android.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux* *-macosx_* *-win32"
test-command = "python -c \"import graphics_native; from graphics import FrameBuffer, RGB565, framebuf_backend; assert framebuf_backend() == 'native'\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.android]
archs = ["arm64_v8a", "x86_64"]
environment = { ANDROID_API_LEVEL = "21" }
test-command = "python -c \"import graphics_native; from graphics import framebuf_backend; assert framebuf_backend() == 'native'\""
test-skip = "*"

[[tool.cibuildwheel.overrides]]
select = "*-android_*"
build-frontend = "build"
